<resources>
    <string name="app_name">TITO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="noAccount">Don\'t have an Account?</string>
    <string name="contentDescLogIn">Log In Button</string>
    <string name="contentDescSignUp">Sign Up Button</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="contentDescLogo">Tito Logo</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_address">enter email address</string>
    <string name="choose_a_username">choose a username</string>
    <string name="choose_a_password">choose a password</string>
    <string name="confirm_password">confirm password</string>
    <string name="screen_title_main">Device List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_friends">Your Friends</string>
    <string name="connect_to_tito_device">Connect to TITO Device</string>
    <string name="not_connected_to_tito_device_connect_now">Not connected to TITO device. Connect Now</string>
</resources>
